deployments/admission-ctrl-validate/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: pod6
  name: pod6
  namespace: default
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do echo $(date); sleep 10; done
    image: nginx
    imagePullPolicy: Always
    name: pod1-cnt1
