deployments/admission-ctrl-validate/admission_control.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "trivy.k8s.loc"
webhooks:
- name: "trivy.k8s.loc"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    url: https://dev-b99.k8s.loc:6443/validate
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1NQ0ZEczRDbDFGTFVkeFJ6Wnl4S3VidHFHS0gvNHJNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1Ib3gKQ3pBSkJnTlZCQVlUQWxWVE1Rc3dDUVlEVlFRSURBSkRRVEVSTUE4R0ExVUVCd3dJVFhRdUlGWnBaWGN4RURBTwpCZ05WQkFvTUIxQnlhWFpoZEdVeEdEQVdCZ05WQkFNTUQyUmxkaTFpT1RrdWF6aHpMbXh2WXpFZk1CMEdDU3FHClNJYjNEUUVKQVJZUWMybGhiV1IxYTJWQWF6aHpMbXh2WXpBZUZ3MHlNakEzTURRd05UTTFNRFJhRncwek1qQTMKTURFd05UTTFNRFJhTUhveEN6QUpCZ05WQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpEUVRFUk1BOEdBMVVFQnd3SQpUWFF1SUZacFpYY [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
